# stage-dependent-comp

./: .gitignore  README.md
code/: README.md  code_testboard.R
code/census_analysis/: census_analysis_config.R  census_analysis_run_crowding_coeff.R  census_analysis_run_legacy.R  census_analysis_run_main.R  census_analysis_run_mcmc.R  overlap_test.nb
code/census_analysis/func/: data_processing.R  env_func.R  spatial_analysis.R  stat_fitting.R
code/census_analysis/prelim/: focal_species_v2.R  species_abundance.R  var_distribution.R
code/census_analysis/sub_scripts/: census_analysis_bmodel_g_overlap_2.stan  census_analysis_demo_summ.R  census_analysis_load_ann_env_data.R  (+18 more)
code/census_analysis_legacy/: census_analysis_run_main.R  census_analysis_run_sp_just.R
code/comm_sims/: comm_sims_run_main.R
code/comm_sims/comm_sims_cpp/: CMakeLists.txt  CMakePresets.json  community.h  community.tpp  community_recorder.h  launch.sh  libs.h  main.cpp  misc_funcs.h  misc_funcs.tpp  population.h  population.tpp  vital_rates.h  vital_rates.tpp
code/comm_sims/comm_sims_cpp/input/: config.ini  spp_vrs.csv
code/tables/: tables.R
code/themes/: custom_themes.R
data/: demography_2014-2022.csv  schofield_pass_daily_avg_temp_f.csv  schofield_pass_precip_accum_inch.csv  schofield_pass_snow_depth_inch.csv  schofield_pass_snow_water_equiv_inch.csv
forZenodo/: README.md
forZenodo/code/: comm_sims_run_main.R
result_data/data_cleanup/: demography_2014-2022_processed.csv  env_data_cleaned.csv
result_data/wp2/: annual_env_data.csv  taxa_stage_bounds.csv  taxa_summary.csv
(+117 files in other folders)
